# jeferson-physics

./: CMakeLists.txt  LICENSE  RigidBody.cpp  RigidBody.h  main.cpp
Math/: ClassicalMechanics.cpp  ClassicalMechanics.h  Line3D.cpp  Line3D.h  Matrix.cpp  Matrix.h  Mesh.cpp  Mesh.h  NewMatrix.cpp  NewMatrix.h  Polygon.cpp  Polygon.h  Triangle.cpp  Triangle.h  Vector2D.cpp  Vector2D.h  Vector3D.cpp  Vector3D.h  WaveFrontOBJReader.cpp  WaveFrontOBJReader.h
Tests/: Test.cpp  Test.h  VectorPerformanceTest.cpp  VectorPerformanceTest.h
